# llmnova-hydra-Gamma-1-main

./: test_jobs.json
llmnova-hydra-Gamma-1-main/: .coverage  .editorconfig  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.prod.yml  docker-compose.yml  gamma_server.py  main.py  mypy.ini  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  test_file_api.py  test_jobs.json  test_new_api.py  verify_jobs.json  verify_phase5.py
llmnova-hydra-Gamma-1-main/backend/: brain_api.py  main.py  requirements.txt  system_api.py
llmnova-hydra-Gamma-1-main/docs/: ARCHITECTURE.md  CI_CD.md  OBSERVABILITY.md  PHASE4_IMPLEMENTATION_PLAN.md  PHASE4_TASK.md  PHASE5_TASK.md  PHASE6_IMPLEMENTATION_PLAN.md  PHASE6_WALKTHROUGH.md  PROGRESSO.md  README.md  README_FINAL.md  REFACTORING_SUMMARY.md  RELATORIO_FINAL.md  STATUS.md  SUMARIO_EXECUTIVO.md  TOOLS.md  architecture_gap_analysis.md  gamma_architecture.puml  hydra_migration_requirements.md
llmnova-hydra-Gamma-1-main/gamma-frontend/: jest.config.js  package-lock.json  package.json
llmnova-hydra-Gamma-1-main/gamma_engine/: __init__.py
llmnova-hydra-Gamma-1-main/llmnova-core/: DComp_Arquitetura.puml  __init__.py  setup.py  validate_project.py
llmnova-hydra-Gamma-1-main/scripts/: ci_fix.ps1  run_mypy.py  validate_gamma.py  verify_full_system.py  verify_hydra_features.py
llmnova-hydra-Gamma-1-main/src/: security.py
llmnova-hydra-Gamma-1-main/tests/: test_local_rag.py  test_local_rag_advanced.py  test_phase2_tools.py  test_phase5_scheduler.py  test_tools.py  (+1 more)
(+104 files in other folders)
