[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gamma-engine"
version = "0.1.0"
description = "Advanced Autonomous AI Agent Framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "watchdog>=4.0.0",
    "playwright>=1.41.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "python-pptx>=0.6.23",
    "reportlab>=4.0.0",
    "Pillow>=10.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.0",
    "apscheduler",
]

[tool.hatch.build.targets.wheel]
packages = ["gamma_engine", "backend"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "N",  # pep8-naming
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v --cov=gamma_engine --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
